<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular_descuento"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/MontoCompra"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:minHeight="48dp"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular_descuento1"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/MontoC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/Descuento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview2" />

        <TextView
            android:id="@+id/CostoNeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/costoneto" />

        <TextView
            android:id="@+id/Impuesto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/impuesto" />

        <TextView
            android:id="@+id/ImporteNeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>